src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Developing_cost__c</fullName>
        <label>Developing cost</label>
        <summarizedField>Milestone__c.Developing_cost__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Finished_by__c</fullName>
        <label>Fnished by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_budget__c</fullName>
        <label>Project budget</label>
        <summarizedField>Milestone__c.Budget__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_is_finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project is finished</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>